Updated Thermometer to use new syntax for String::format